Bug 146140 - FILEOPEN ODT Moved List items are falling apart, if the original DOCX created in MSO with change tracking, and saved and reload in ODT in Writer.
Summary: FILEOPEN ODT Moved List items are falling apart, if the original DOCX created...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords: bibisectRequest, filter:docx, regression
Depends on:
Blocks: Track-Changes-Lists
  Show dependency treegraph
 
Reported: 2021-12-09 08:52 UTC by NISZ LibreOffice Team
Modified: 2022-01-04 13:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word with a list (13.26 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-12-09 08:54 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document in Writer (5.17 KB, image/jpeg)
2021-12-09 08:55 UTC, NISZ LibreOffice Team
Details
Screenshot of the exported document in Writer (5.19 KB, image/jpeg)
2021-12-09 08:56 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-12-09 08:52:36 UTC
Description:
The reason is saving the deleted list paragraph and its deleted new line in two different tracked deletions at the same position, which loaded in reverse order in (older) Writer (tdf#107292). While tdf#107292 was fixed in master and 7.3, for back compatibility it must fix the unnecessary deletions at the same position, joining the deleted paragraph and the deleted new line in a single deletion.

Steps to Reproduce:
 1. Open attached file
 2. Move “February” to the 4. place
 3. Save as ODT then reload the file

Actual Results:
List elements are falling apart

Expected Results:
The elements of the list should not fall apart


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3a61cce54277fd12570103a191c50d9b37ef3dd3
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-12-09 08:52:52 UTC
regression:
commit 9e1e88ad5cf2dc0e9b188c60930445652a6c7519
Author: László Németh <nemeth@numbertext.org>
Date:   Thu Dec 2 17:45:46 2021 +0100

    tdf#145720 DOCX export: fix loss of tracked moving
Comment 2 NISZ LibreOffice Team 2021-12-09 08:54:45 UTC
Created attachment 176828 [details]
Example file from Word with a list
Comment 3 NISZ LibreOffice Team 2021-12-09 08:55:18 UTC
Created attachment 176829 [details]
Screenshot of the original document in Writer
Comment 4 NISZ LibreOffice Team 2021-12-09 08:56:16 UTC
Created attachment 176830 [details]
Screenshot of the exported document in Writer
Comment 5 Commit Notification 2021-12-11 09:33:30 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/692bc46b25db61176b4ced7b7beffeca7d55068e

tdf#146140 sw DOCX import: fix moveFrom regression with broken text content

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2021-12-11 14:05:02 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/9f41f860fc084bbfe7aef0691a061c6b9e99e04b

tdf#146140 sw DOCX import: fix moveFrom regression with broken text content

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 NISZ LibreOffice Team 2022-01-04 13:03:35 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 8f0ce842dffe229d31bd9841ac6e999da1ae976d
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL